spec/process_typed_send_error.kex
# Typed process: sending the wrong type is a compile error.
type Msg = Ping | Pong

foul server -> Process<Msg> do
  return spawn do
    receive do
      Ping -> IO.printLine("ping")
    end
  end
end

main do
  let p = server()
  p.send("wrong type")
end
